--- a/src/modules/HomeModule/pages/HomePage/HomePage.scss
+++ b/src/modules/HomeModule/pages/HomePage/HomePage.scss
@@ -1,7 +1,15 @@
 .signUp_wrapper, label {
     display: flex;
     flex-direction: column;
+}
 
-
+input {
+    width: 30%;
+    height: 35px;
+    border-radius: 50px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    padding-left: 15px;
 }
 
